[project]
name = "DP-FedSAC"
version = "0.1.0"
description = "Soft Actor-Critic agent for joint adaptive gradient clipping and noise in differentially private federated learning."
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "torch>=2.11.0",
    "wandb>=0.26.0",
]
