[project]
name = "DP-FedSAC"
version = "0.1.0"
description = "Soft Actor-Critic agent for joint adaptive gradient clipping and noise in differentially private federated learning."
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "gymnasium>=1.2.3",
    "kaleido>=1.2.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "wandb>=0.26.0",
]
